...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subtitle">

        <ImageButton
            android:id="@+id/NewGameButton"
            style="@style/ButtonsMain"
            android:contentDescription="New Game"
            app:srcCompat="@drawable/new_game" />

        <ImageButton
            android:id="@+id/ContinueButton"
            style="@style/ButtonsMain"
            android:contentDescription="Continue"
            app:srcCompat="@drawable/continue_game" />

        <ImageButton
            android:id="@+id/StatsButton"
            style="@style/ButtonsMain"
            android:contentDescription="Stats"
            app:srcCompat="@drawable/stats" />

        <ImageButton
            android:id="@+id/ConnectionButton"
            style="@style/ButtonsMain"
            android:contentDescription="Connection"
            app:srcCompat="@drawable/connection" />

        <ImageButton
            android:id="@+id/HelpButton"
            style="@style/ButtonsMain"
            android:contentDescription="Help"
...
