...
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="mini"
            app:srcCompat="@drawable/music_sign" />
...
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceTitleText" />

        <TextView
            android:id="@+id/songsFoundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="#F#"
            android:textColor="@color/primary_text"
...
